# energy-model-tests

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
.dbt/: profiles.yml
.github/dbt_profiles/: profiles.yml
.github/pull_request/: profiles.yml
.github/workflows/: develop.yml  main.yml  mirror.yml  release.yml
deploy/: databricks.yml
deploy-dev/: databricks.yml
deploy-dev/workflows/: sample_job.yml
deploy-stg/: databricks.yml
deploy-stg/workflows/: sample_job.yml
deploy/workflows/: sample_job.yml
models/churn_address/: churn_address_test.sql  churn_address_test.yml
models/churn_agreements/: churn_agreements_test.sql  churn_agreements_test.yml
models/churn_billing/: churn_billing_test.sql  churn_billing_test.yml
models/churn_complaint/: churn_complaint_test.sql  churn_complaint_test.yml
models/churn_consumption/: churn_consumption_test.sql  churn_consumption_test.yml
models/churn_customer/: churn_customer_test.sql  churn_customer_test.yml
models/churn_holding/: churn_holding_test.sql  churn_holding_test.yml
models/churn_interaction/: churn_interaction_test.sql  churn_interaction_test.yml
models/churn_nps/: churn_nps_test.sql  churn_nps_test.yml
